[package]
name = "wwt-aligner-frontend"
version = "0.0.0-dev.0"
authors = ["AAS WorldWide Telescope <wwt@aas.org>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "^1.0"
nix = "^0.20"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"

[[bin]]
name = "wwt-aligner"
path = "src/main.rs"
